# fermentation-sandbox

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: check_memory_size.py
.claude/memory/: MEMORY.md  feedback-always-commit-push.md  feedback-batch-end-ritual.md  feedback-discuss-disagreements.md  feedback-full-suite-before-green.md  feedback-measure-which-side-before-building.md  feedback-name-guards-for-what-they-forbid.md  feedback-never-pipe-checks-to-tail.md  feedback-no-powershell-heredoc-in-bash.md  feedback-rejected-values-must-be-unreachable.md  feedback-verify-latest-state-not-breadcrumbs.md  project-fermentation-sandbox.md  reference-claude-best-practices.md  user-boykoneov.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  FERMENTATION_SIM_HANDOFF.md
docs/plans/: milestone-1-context.md  milestone-1-plan.md  milestone-1-tasks.md  milestone-2-context.md  milestone-2-plan.md  milestone-2-tasks.md  milestone-3-plan.md  ph-charge-balance-keystone-d-18-tender-wave.md
src/fermentation/: __init__.py  analysis.py
tests/: conftest.py  test_acetaldehyde.py  test_acidbase.py  test_aging.py  test_aging_scenario.py  test_amino_acid_pools.py  test_amino_acids.py  test_attribution.py  test_autolysis.py  test_bound_sulfides.py  test_brett.py  test_carrying_capacity.py  test_chemistry.py  test_closure_ingress.py  test_coleman_reconstruction.py  test_compile.py  test_dms.py  test_ensemble.py  test_fusel_catabolic_shape.py  test_fusel_keto_acid_node.py  test_fusel_reroute.py  test_hops.py  test_hydrogen_sulfide.py  test_integrate.py  test_interventions.py  test_keto_acids.py  test_kinetics_arrhenius.py  test_kinetics_byproducts.py  test_kinetics_ethanol_ceiling.py  test_kinetics_growth.py  test_kinetics_inactivation.py  test_kinetics_inhibition.py  test_kinetics_uptake.py  test_malolactic.py  test_media.py  test_mercaptans.py  test_mlf_diacetyl.py  test_mlf_fatty_acid_inhibition.py  test_mlf_growth.py  test_parameters.py  (+14 more)
tests/benchmarks/: test_beer_temperature_response.py  test_milestone1.py  (+2 more)
tools/: gen_decisions_toc.py
(+67 files in other folders)
